# punchline-detector

./: .gitignore  README.md  pyproject.toml
src/analysis/: __main__.py  models.py  viewer.py
src/comedy_pipeline/: __init__.py  cli.py  models.py  phase1_acquisition.py  phase2_preprocessing.py  phase3_detection.py  phase4_postprocessing.py  phase5_timeline.py  phase6_qa.py  phase7_segmentation.py  phase8_transcript.py  pipeline.py
src/web_app/: app.py  job_manager.py  pipeline_runner.py
src/web_app/static/: style.css
src/web_app/templates/: base.html  history.html  index.html  job.html  results.html
tests/: test_pipeline.py
