[project]
name = "comedy-pipeline"
version = "0.1.0"
description = "Stand-up Comedy Laughter Detection Pipeline with Context-Based Paragraph Segmentation"
# Pinning to 3.12 is safer for Torch right now
requires-python = ">=3.11,<3.13"
dependencies = [
    "yt-dlp>=2024.0.0",
    "youtube-transcript-api>=0.6.0",
    "demucs>=4.0.0",
    # Pinning to 2.4.0 often resolves the "Manylinux only" conflict
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "click>=8.1.0",
]

[project.scripts]
comedy-pipeline = "comedy_pipeline.cli:main"
comedy-viewer = "analysis.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comedy_pipeline", "src/analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
analysis = [
    "pyqt6>=6.6.0",
]

[tool.uv]
default-groups = ["dev", "analysis"]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]
